--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,7 @@
+// I dont know what this file does. 
+// you fill find Mr Dhaker nolonger supports the library 
+// 
+
 {
   "name": "pluginscart/dynamodb-php",
   "require": {
